# ACI

./: .gitignore  ARCHITECTURE.md  CONTRIBUTION.md  LICENSE  README.md  check_routing.py  docker-compose.yml  manage.py  requirements.txt  run_benchmark.py  sample.env
aci/: asgi.py  settings.py  wsgi.py
aci-mcp-servers/aci-board/: pyproject.toml
aci-mcp-servers/aci-board/aci_board/: server.py  store.py
aci-mcp-servers/aci-memory/: pyproject.toml
aci-mcp-servers/aci-taskqueue/: pyproject.toml
aci-mcp-servers/aci-taskqueue/aci_taskqueue/: server.py  store.py
aci-mcp-servers/aci-thehive/: pyproject.toml
aci-mcp-servers/aci-thehive/aci_thehive/: client.py  server.py
aci-mcp-servers/aci-wazuh/: pyproject.toml
aci_backend/: asgi.py  settings.py  urls.py  wsgi.py
agent/: admin.py  apps.py  models.py  stats.py  urls.py  views.py
agent/agents/: base.py  investigation.py  registry.py  seeder.py  triage.py
agent/dashboard/: consumers.py  events.py  routing.py  run_actions.py  runner.py  runs_views.py  urls.py  views.py
agent/migrations/: 0001_initial.py  0002_agentevent.py  0003_providerconfig_agentrun_trigger.py  0004_agent_core_contracts.py  0005_modelproviderconfig_disable_timeout.py  (+15 more)
benchmark/: README.md  __init__.py  cli.py  progress.py
docs/: README.md  current_project_state.md  soc_agent_rubric.md
tests/: README.md  conftest.py  diagnose_test.py  test_agent_contracts.py  test_avfs_expand.py  test_findings_board.py  test_graph_stub.py  test_intent_ordering.py  test_leads_re.py  test_run.py  test_scenarios.py  test_streaming.py  test_summary.py
(+338 files in other folders)
