[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "aci-board"
version = "0.1.0"
description = "ACI MCP server for per-session findings boards"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["mcp>=1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aci_board*"]
