[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "aci-thehive"
version = "0.1.0"
description = "ACI MCP server for TheHive SOAR"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0", "httpx>=0.27"]

[project.scripts]
aci-thehive = "aci_thehive.server:main"
